<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_onboarding_panel_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.gracie.muse.OnboardingPanelIntro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <example.com.gracie.muse.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:color="@color/colorPrimaryDark"
            android:text="@string/panel"
            android:textSize="24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/panel1v2" />

        <example.com.gracie.muse.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/onboard_panel1"
            android:textColor="@color/colorPrimaryDark"></example.com.gracie.muse.CustomTextView>

        <example.com.gracie.muse.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/onboard_panel2"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <example.com.gracie.muse.CButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@color/colorAccent"
                android:padding="12dp"
                android:onClick="toExplore"
                android:text="@string/button_got_it"
                android:textColor="@android:color/white"
                android:textSize="20dp"></example.com.gracie.muse.CButton>

            <example.com.gracie.muse.CButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:onClick="toMain"
                android:background="@android:color/transparent"></example.com.gracie.muse.CButton>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
