<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_onboarding_contribute"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.gracie.muse.OnboardingContribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <example.com.gracie.muse.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/contribute"
            android:layout_marginBottom="10dp"
            android:textSize="24dp"
            android:color="@color/colorPrimaryDark"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="250dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/onboardcontribute"/>

        <example.com.gracie.muse.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/onboard_contribute1"></example.com.gracie.muse.CustomTextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <example.com.gracie.muse.CButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@color/colorAccent"
                android:padding="12dp"
                android:onClick="toCreate"
                android:text="@string/button_contribute_to_create"
                android:textColor="@android:color/white"
                android:textSize="18dp"></example.com.gracie.muse.CButton>

            <example.com.gracie.muse.CButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:onClick="toMain"
                android:background="@android:color/transparent"></example.com.gracie.muse.CButton>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>