<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_strip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="example.com.gracie.muse.NewStripActivity">

    <EditText android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title" />

    <!-- Button to insert from gallery -->

    <ImageButton
        android:id="@+id/image_selected"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/cat_4"
        android:onClick="uploadPhoto"/>

    <EditText android:id="@+id/edit_blurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_blurb" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:layout_gravity="center|bottom"
        android:gravity="bottom">
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_send"
            android:onClick="finishNewStrip"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_cancel"
            android:onClick="cancelNewStrip"/>
    </LinearLayout>


</LinearLayout>
