<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.gracie.muse.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/musenewlogo"
            android:paddingBottom="16dp"
            />
        <example.com.gracie.muse.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/create_account"></example.com.gracie.muse.CustomTextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <example.com.gracie.muse.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:hint="@string/enter_username"></example.com.gracie.muse.CustomTextView>

            <!--gotta check if the username/email is unique-->
            <example.com.gracie.muse.CEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></example.com.gracie.muse.CEditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <example.com.gracie.muse.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/enter_email"></example.com.gracie.muse.CustomTextView>


            <example.com.gracie.muse.CEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></example.com.gracie.muse.CEditText>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <example.com.gracie.muse.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/password"></example.com.gracie.muse.CustomTextView>

            <example.com.gracie.muse.CEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></example.com.gracie.muse.CEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <example.com.gracie.muse.CButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:onClick="toOnboarding"
                android:text="@string/button_create_account"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"></example.com.gracie.muse.CButton>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
