<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.gracie.muse.AddPanelActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--If title can go there like "Adding to [name of strip]"-->
            <example.com.gracie.muse.CustomTextView
                android:id="@+id/adding_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></example.com.gracie.muse.CustomTextView>

            <!-- Button to insert from gallery -->

            <ImageButton
                android:id="@+id/image_selected"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:layout_gravity="center"
                android:onClick="uploadPhoto"
                android:src="@drawable/tap_to_upload"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"/>

            <example.com.gracie.muse.CEditText
                android:id="@+id/edit_blurb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_blurb"></example.com.gracie.muse.CEditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <example.com.gracie.muse.CEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_tags"></example.com.gracie.muse.CEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="25dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <example.com.gracie.muse.CButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="cancelNewStrip"
                    android:text="@string/button_cancel"></example.com.gracie.muse.CButton>

                <!--this needs to go straight to finishStripActivity-->
                <example.com.gracie.muse.CButton
                    android:id="@+id/ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:background="@android:color/transparent"
                    android:text="@string/button_create">

                </example.com.gracie.muse.CButton>



            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
